<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="4dp"
        android:text="@string/name_header"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/category_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/category_header"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/in_pantry_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/in_pantry_header"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <Spinner
        android:id="@+id/pantry_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/save"
        android:layout_gravity="center"
        android:onClick="saveRecipe"/>

</LinearLayout>
