<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="radfordsm2.androidrecipebook.AddIngredient">


    <android.support.v7.widget.Toolbar
        android:id="@+id/edit_ingredient_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        app:titleTextColor="@color/ActionBarText"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:title="@string/edit_ingredient_header"
        />

    <TextView
        android:id="@+id/name_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_ingredient_toolbar"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="4dp"
        android:text="@string/name_header"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:layout_below="@id/name_header"
        android:background="@drawable/edit_input_shape"/>

    <TextView
        android:id="@+id/empty_name_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_input"
        android:text = "Please Give A Name"
        android:textColor="#FF0000"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/duplicate_name_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_input"
        android:text = "This Ingredient Already Exists"
        android:textColor="#FF0000"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/category_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_input"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/category_header"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_header"/>

    <TextView
        android:id="@+id/in_pantry_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_spinner"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/in_pantry_header"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <Spinner
        android:id="@+id/pantry_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/in_pantry_header"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/save"
        android:layout_below="@id/pantry_spinner"
        android:onClick="saveIngredient"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/cancel"
        android:layout_below="@id/pantry_spinner"
        android:layout_toRightOf="@id/save_button"
        android:onClick="cancelIngredient"/>

    <Button
        android:id="@+id/delete_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/delete"
        android:layout_below="@id/save_button"
        android:layout_centerInParent="true"
        android:onClick="deleteIngredient"/>
</RelativeLayout>
